--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body {
     margin: 0;
     font-family: 'Montserrat', sans-serif;
     color: white;
+    background-color: #3a3e42;
 }
 
 h1 {
@@ -33,6 +34,8 @@ h1 {
     padding: 20px;
     text-align: center;
     border-radius: 10px;
+    border: 1px solid #353535;
+    box-shadow: 10px 10px 20px -10px black;
 }
 
 .background-1 {
@@ -82,6 +85,10 @@ h1 {
     text-align: center;
 }
 
+input:focus {
+    outline: none;
+}
+
 .input-email {
     margin-bottom: 70px;
 }
@@ -95,7 +102,7 @@ h1 {
     text-align: left;
 }
 
-.fa-play{
+.fa-music{
     font-size: 3rem;
     margin-left: 5px;
 }
